--- a/src/bun-postgresql/.devcontainer/devcontainer.json
+++ b/src/bun-postgresql/.devcontainer/devcontainer.json
@@ -1,4 +1,5 @@
-{	"name": "Bun & PostgreSQL",
+{
+	"name": "Bun & PostgreSQL",
 	"dockerComposeFile": "docker-compose.yml",
 	"service": "app",
 	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}"
